service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/backend-config: '{"default": "my-awesome-app"}'
  name: my-awesome-app
  namespace: production
spec:
  selector:
    app.kubernetes.io/name: my-awesome-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
